After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724337 - segfault when loading an xges
segfault when loading an xges
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-14 02:25 UTC by Alex Băluț
Modified: 2014-02-16 19:59 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file with the project (1.79 KB, text/x-xges)
2014-02-14 08:55 UTC, Alex Băluț
  Details
ges: Give a reference to the formatter for the idle callback (2.58 KB, patch)
2014-02-14 12:22 UTC, Thibault Saunier
committed Details | Review

Description Alex Băluț 2014-02-14 02:25:10 UTC
$ ges-launch-1.0 -l /tmp/auto_pitivi_test_project_settings-backup.xges
Loading project from : /tmp/auto_pitivi_test_project_settings-backup.xges

(lt-ges-launch-1.0:8127): GLib-GObject-CRITICAL **: g_type_instance_get_private: assertion 'instance != NULL && instance->g_class != NULL' failed
Segmentation fault (core dumped)
Comment 1 Thibault Saunier 2014-02-14 08:27:05 UTC
> $ ges-launch-1.0 -l /tmp/auto_pitivi_test_project_settings-backup.xges
> Loading project from : /tmp/auto_pitivi_test_project_settings-backup.xges
> 
> (lt-ges-launch-1.0:8127): GLib-GObject-CRITICAL **:
> g_type_instance_get_private: assertion 'instance != NULL && instance->g_class
> != NULL' failed
> Segmentation fault (core dumped)

Could you provide that project so we can debug it please?
Comment 2 Alex Băluț 2014-02-14 08:55:29 UTC
Created attachment 269098 [details]
file with the project

Had the impression I attached it when I created the bug. - ah, it failed because I did not write a description, and it was simply ignored.
Comment 3 Thibault Saunier 2014-02-14 12:22:22 UTC
Created attachment 269115 [details] [review]
ges: Give a reference to the formatter for the idle callback

This avoid segfault as we are not guaranteed that the formatter will
not be destroyed in the meantime.

+ Minor cleanup of handling of private members
Comment 4 Thibault Saunier 2014-02-14 12:24:11 UTC
@alex: Could you please check that out and tell me if it is good to push please?
Comment 5 Thibault Saunier 2014-02-16 19:58:37 UTC
Attachment 269115 [details] pushed as 387b234 - ges: Give a reference to the formatter for the idle callback